# tf-plc

./: .gitignore  README.md  TODO.txt  commands.txt  e2e.sh  local_model.py  notes.txt  onnx_model.py  plotting.py  pyproject.toml  requirements.txt  st_code_generator.py  todo.txt
code-gen/: ir_to_st.py  main.py  onnx_model.py  onnx_to_ir.py  openplc_st.py  st_code.py  types.py
codegen/: ir_to_st.py  main.py  onnx_model.py  onnx_to_ir.py  st_code.py  types.py
codegen/ir_optimizer/: __init__.py  base_pass.py  optimizer.py
codegen/ir_to_st/: __init__.py  generator.py  st_code.py  type_conversion.py
codegen/memory_check/: memory_analyzer.py
codegen/onnx_to_ir/: __init__.py  converter.py  layer_extractors.py  shape_inference.py  tensor_resolution.py  weight_utils.py
data/: temperature_data.csv
examples/data/: temperature_data.csv
examples/models/: local_model.py  local_model2.py
imgs/: pipeline.md
models/: temp_sensor_20250923_123155.keras  temp_sensor_20250923_123155.weights.h5  temp_sensor_20250923_123155_int_only_quant.tflite  temp_sensor_20251111_131311.keras  temp_sensor_20251111_131311.weights.h5  temp_sensor_no_data_int8.tflite
models/onnx/: better_temp_classifier.onnx  model.onnx  temp_data_int8.onnx  temp_int8.onnx  temp_sensor_dynamic.onnx
models/structured_text/: better_temp_classifier.st  model.st  temp_data_int8.st  test.st
src/codegen/: main.py  onnx_model.py  onnx_to_ir.py  types.py
src/util/: quantize_model.py  (+2 more)
util/: convert_to_onnx.py  onnx_graph_optimizations.py  quantize_model.py  tflite_weight_extractor.py  weights_extractor.py
(+90 files in other folders)
